Update to Kordex 2.0.0