@@ -59,6 +59,9 @@ tasks {
 
     compileJava {
         dependsOn(generateBindingsWithJextract)
-        options.compilerArgs.add("--enable-preview")
     }
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_22
 }
